Convert dependency review to reusable workflow
Refactor dependency review workflow to be reusable with inputs for runner, severity, scopes, and checks.

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,21 +1,46 @@
-name: Dependency Review (required)
+name: Dependency Review Reusable Workflow
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, ready_for_review]
-    branches:
-      - main
-      - master
-      - 'release/*'
+  workflow_call:
+    inputs:
+      runner:
+        required: false
+        type: string
+        default: ubuntu-latest-codeql
+        description: A specific runner to use for the job.
+
+      fail-on-severity:
+        required: false
+        type: string
+        default: high     # low | moderate | high | critical
+
+      fail-on-scopes:
+        required: false
+        type: string
+        default: runtime  # runtime | development | all
+
+      license-check:
+        required: false
+        type: boolean
+        default: false
+
+      openssf-check:
+        required: false
+        type: boolean
+        default: false
+
+      comment-summary:
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   dependency-review:
     name: Dependency Review
-    runs-on: ubuntu-latest-codeql
+    runs-on: ${{ inputs.runner }}
     permissions:
       contents: read
       pull-requests: write
-      security-events: write 
 
     steps:
       - name: Checkout repository
@@ -24,9 +49,9 @@ jobs:
       - name: Dependency Review
         uses: actions/dependency-review-action@v4.8.2
         with:
-          fail-on-severity: high
-          fail-on-scopes: runtime
+          fail-on-severity: ${{ inputs.fail-on-severity }}
+          fail-on-scopes:   ${{ inputs.fail-on-scopes }}
           vulnerability-check: true
-          license-check: false
-          comment-summary-in-pr: true
-          show-openssf-scorecard: false
+          license-check:    ${{ inputs.license-check }}
+          comment-summary-in-pr: ${{ inputs.comment-summary }}
+          show-openssf-scorecard: ${{ inputs.openssf-check }}
