--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,7 +1,12 @@
 name: Dependency Review Reusable Workflow
 
 on:
+  push:
+    branches:
+      - "main"
   pull_request:
+    branches:
+      - "**"
 
 jobs:
   dependency-review:
