--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   dependency-review:
     name: Dependency Review
-    runs-on: ${{ inputs.runner }}
+    runs-on: ubuntu-latest-codeql
     permissions:
       contents: read
       pull-requests: write
