--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -6,11 +6,11 @@ on:
       - "**"
 
 jobs:
-  dependency-review:
-    name: Dependency Review
+  dependency-submission-java-only:
+    name: Dependency Submission (Java Only)
     runs-on: ubuntu-latest-codeql
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
 
     steps:
@@ -84,7 +84,14 @@ jobs:
           # gradle-version: '8.7'
 
       # --- Dependency Review for all repos ---
+  dependency-review:
+    name: Dependency Review
+    runs-on: ubuntu-latest-codeql
+    permissions:
+      contents: read
+      pull-requests: write
 
+    steps:  
       - name: Dependency Review
         uses: actions/dependency-review-action@v4.8.2
         with:
